tests/resources/errors/errors25.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

void write_val(int val) {

#if OS_GROUP_WINDOWS
    void* handle = std.GetStdHandle(-11);
    uint32 written;
    char c = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    char c = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct A {
    int v;

    ~A() {
        std.print("~A called!");
    }
}

A foo(bool b) raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{ 64 };
    }
}

void main() {
    int v1 = try foo(false).v {
        std.print("caught error!");
        recover 94;
    };
    write_val(v1);
    std.print("...");
    int v2 = try foo(true).v { // it should not destroy A in this case!
        std.print("caught error!");
        recover 94;
    };
    write_val(v2);
}